# clipboardmonitor

./: .gitignore  CMakeLists.txt  ClipboardMonitor  README.md  build.sh  main.cpp  resources.qrc
data/: clipboard-monitor.desktop  clipboard-monitor.service.in
src/: clipboard-history-model.cpp  clipboard-history-model.h  clipboard-history-store.cpp  clipboard-history-store.h  clipboard-monitor-window.cpp  clipboard-monitor-window.h  keyboard-monitor.cpp  keyboard-monitor.h
